@startuml
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml
hide circle
skinparam {
    classAttributeIconSize 0
    packageStyle rectangle
    linetype ortho
    backgroundColor transparent
}  







DiscoKugel -u-|> Circle
Leuchtstab -u-|> Line
Circle -u-|> Shapes
Line -u-|> Shapes
Rectangle -u-|> Shapes
xxx -u-|> Shapes


class Leuchtstab {
    + Leuchtstab(double x, double y)
    + void act()
}

class DiscoKugel {
    + DiscoKugel(double x, double y)
    + void act()
}

class Shapes {
    + void act()
    + void move(double dx, double dy)
    + void setFillColor(Color color)
    + void rotate(double degrees)
    + void scale(double factor)
}
@enduml